--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@ rerun.txt
 /config/application.yml
 
 .gemnasium.yml
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
